--- a/test/fixtures/devices.yml
+++ b/test/fixtures/devices.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  token: MyString
-  user_id: 
+demo:
+  token: <%= "x" * 64 %>
+  user_id: 1
+  timezone: 8
 
-two:
-  token: MyString
-  user_id: 
