--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  email: MyString
+demo:
+  id: 1
+  name: demo
   password_digest: MyString
   deleted_at: 2014-10-13 20:21:13
 
-two:
-  email: MyString
-  password_digest: MyString
-  deleted_at: 2014-10-13 20:21:13
