--- a/fixtures/vcr_cassettes/weibo_sina_non_existent_user.yml
+++ b/fixtures/vcr_cassettes/weibo_sina_non_existent_user.yml
@@ -13,44 +13,16 @@ http_interactions:
       message: Not Found
     headers:
       Content-Type:
-      - text/html;charset=utf-8
+      - application/json;charset=utf-8
       X-Cascade:
       - pass
-      X-Xss-Protection:
-      - 1; mode=block
       X-Content-Type-Options:
       - nosniff
-      X-Frame-Options:
-      - SAMEORIGIN
       Content-Length:
-      - '491'
+      - '18'
     body:
       encoding: ASCII-8BIT
-      string: |
-        <!DOCTYPE html>
-        <html>
-        <head>
-          <style type="text/css">
-          body { text-align:center;font-family:helvetica,arial;font-size:22px;
-            color:#888;margin:20px}
-          #c {margin:0 auto;width:500px;text-align:left}
-          </style>
-        </head>
-        <body>
-          <h2>Sinatra doesn&rsquo;t know this ditty.</h2>
-          <img src='http://localhost:5555/__sinatra__/404.png'>
-          <div id="c">
-            Try this:
-            <pre># in app.rb
-        class App
-          get '/user/non-existent-user' do
-            "Hello World"
-          end
-        end
-        </pre>
-          </div>
-        </body>
-        </html>
+      string: "<h1>Not Found</h1>"
     http_version: 
-  recorded_at: Thu, 04 Dec 2014 13:09:41 GMT
+  recorded_at: Fri, 05 Dec 2014 01:17:44 GMT
 recorded_with: VCR 2.9.3
