Update .travis.yml to create test database before running the tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ rvm:
   - 2.1.2
 
 before_script:
-  - "cp ./.travis.database.yml ./config/database.yml"
-  - "cp ./.travis.application.yml ./config/application.yml"
+  - "mysql -e 'create database tixing_test;'"
+  - 'cp ./.travis.database.yml ./config/database.yml'
+  - 'cp ./.travis.application.yml ./config/application.yml'
 
 script: bundle exec rake test
